# TCC

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.ps1
assets/: link.glb  tree.glb
src/: celShader.c  celShader.h  gui.c  gui.h  lambertShader.c  main.c
